# tg4perfetto

./: pyproject.toml
src/tg4perfetto/: perfetto_trace_pb2.py
