[build-system]
requires = ["setuptools"]

[tool.setuptools.package-data]
tg4perfetto = ["*.py", "*.proto"]

[project]
name = "tg4perfetto"
version = "0.0.7"
authors = [
  { name="Junhee Yoo", email="ihavnoid@yahoo.com" },
]
description = "A trace generator library for creating perfetto files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
dependencies = ["protobuf>=6.31,<7"]

[project.urls]
"Homepage" = "https://github.com/ihavnoid/tg4perfetto"
"Bug Tracker" = "https://github.com/ihavnoid/tg4perfetto/issues"


